--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,15 @@
+.stage {
+  height: 100vh;
+  overflow: hidden;
+  position: relative; }
+  .stage::before, .stage::after {
+    content: '';
+    background-color: #d96a71;
+    height: 100vh;
+    position: absolute;
+    width: 100%;
+    z-index: -1; }
+
 .header {
-  text-align: left;
+  text-align: center;
   transition: transform 0.5s ease-out, opacity 0.5s ease-out; }
