Feat: (wip) added scoring JS improvments

--- a/css/index.css
+++ b/css/index.css
@@ -41,3 +41,35 @@
 .healthbar__krampus-meter {
   flex: 1;
   margin: 20px; }
+
+.result {
+  background-color: #e36a71;
+  position: absolute;
+  visibility: hidden; }
+
+.instructions__santa,
+.instructions__krampus {
+  left: 20px;
+  padding: 20px;
+  position: absolute; }
+
+.instructions__krampus {
+  left: auto;
+  padding: 20px;
+  position: absolute;
+  right: 20px; }
+
+.instructions__krampus p {
+  text-align: right; }
+
+.santa-key-a,
+.santa-key-s,
+.krampus-key-k,
+.krampus-key-l {
+  border: 2px solid #fff;
+  display: inline-block;
+  font-size: 25px;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  width: 25px; }
