--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@
   left: 50%;
   position: absolute;
   text-align: center;
-  top: 70px;
+  top: 100px;
   transform: translate(-50%, 0);
   transition: transform 0.5s ease-out, opacity 0.5s ease-out; }
 
@@ -43,12 +43,29 @@
   margin: 20px; }
 
 .result {
+  align-items: center;
   background-color: #e36a71;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  left: 0;
+  opacity: 0;
   position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  transform: scale(0);
+  transition: transform 0.5s ease-out, opacity 0.5s ease-out;
   visibility: hidden; }
+  .fight-over .result {
+    opacity: 1;
+    transform: scale(1);
+    visibility: visible; }
 
 .instructions__santa,
 .instructions__krampus {
+  bottom: 20px;
   left: 20px;
   padding: 20px;
   position: absolute; }
