--- a/sass/index.scss
+++ b/sass/index.scss
@@ -31,7 +31,7 @@ $white:					#fff;
 	left: 50%;
 	position: absolute;
   text-align: center;
-  top: 70px;
+  top: 100px;
   transform: translate(-50%, 0);
   transition: transform $baseTransitionTime ease-out, opacity $baseTransitionTime ease-out;
 }
@@ -59,13 +59,32 @@ $white:					#fff;
 }
 
 .result {
+	align-items: center;
 	background-color: $red2;
+	bottom: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	left: 0;
+	opacity: 0;
 	position: absolute;
+	right: 0;
+	text-align: center;
+	top: 0;
+	transform: scale(0);
+	transition: transform $baseTransitionTime ease-out, opacity $baseTransitionTime ease-out;
 	visibility: hidden;
+
+	.fight-over & {
+		opacity: 1;
+		transform: scale(1);
+		visibility: visible;
+	}
 }
 
 .instructions__santa,
 .instructions__krampus {
+	bottom: 20px;
 	left: 20px;
 	padding: 20px;
 	position: absolute;
