--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,8 @@
 
 .fighters {
   display: flex;
-  height: 75vh; }
+  height: 75vh;
+  margin: 0 10%; }
 
 .santa-body,
 .krampus-body {
@@ -79,29 +80,89 @@
   align-items: center;
   justify-content: center; }
 
-.santa-body__lu-arm,
-.santa-body__lf-arm,
-.santa-body__ru-arm,
-.santa-body__rf-arm,
-.krampus-body__lu-arm,
-.krampus-body__lf-arm,
-.krampus-body__ru-arm,
-.krampus-body__rf-arm {
+.santa-body {
+  margin-left: 10%; }
+
+.krampus-body {
+  margin-right: 10%; }
+
+.santa-l-arm,
+.santa-r-arm,
+.krampus-l-arm,
+.krampus-r-arm {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  height: 50px; }
+
+.santa-l-arm,
+.santa-r-arm,
+.krampus-l-arm,
+.krampus-r-arm {
+  position: absolute; }
+
+.santa-r-arm,
+.krampus-l-arm {
+  left: 50%;
+  z-index: 2; }
+
+.krampus-l-arm,
+.krampus-r-arm {
+  right: 50%;
+  left: auto; }
+
+.santa-l-arm {
+  left: 70%; }
+
+.krampus-r-arm {
+  right: 70%; }
+
+.santa-l-arm__upper,
+.santa-l-arm__lower,
+.santa-r-arm__upper,
+.santa-r-arm__lower,
+.krampus-l-arm__upper,
+.krampus-l-arm__lower,
+.krampus-r-arm__upper,
+.krampus-r-arm__lower {
   background-color: #333;
-  width: 30px;
-  height: 30px; }
+  position: absolute;
+  height: 50%;
+  width: 60%; }
+
+.santa-l-arm__upper,
+.santa-r-arm__upper,
+.krampus-l-arm__upper,
+.krampus-r-arm__upper {
+  transform: rotate(45deg);
+  left: 0; }
+
+.santa-l-arm__lower,
+.santa-r-arm__lower,
+.krampus-l-arm__lower,
+.krampus-r-arm__lower {
+  transform: translateX(60%) rotate(-45deg); }
 
 .santa-body__head,
 .krampus-body__head {
   background-color: #fff;
-  width: 10%;
-  height: 12%; }
+  width: 20%;
+  height: 20%; }
 
 .santa-body__torso,
 .krampus-body__torso {
+  position: relative;
   background-color: #fff;
-  width: 40%;
-  height: 40%; }
+  width: 60%;
+  height: 50%; }
+
+.santa-body__torso__inner,
+.krampus-body__torso__inner {
+  background-color: #fff;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%; }
 
 .instructions__santa,
 .instructions__krampus {
