--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,7 @@
 
 .result {
   align-items: center;
-  background-color: #e36a71;
+  background-color: rgba(0, 0, 0, 0.2);
   bottom: 0;
   display: flex;
   flex-direction: column;
@@ -57,7 +57,8 @@
   top: 0;
   transform: scale(0);
   transition: transform 0.5s ease-out, opacity 0.5s ease-out;
-  visibility: hidden; }
+  visibility: hidden;
+  z-index: 5; }
   .fight-over .result {
     opacity: 1;
     transform: scale(1);
@@ -69,7 +70,8 @@
 .fighters {
   display: flex;
   height: 75vh;
-  margin: 0 10%; }
+  margin: 0 10%;
+  position: relative; }
 
 .santa-body,
 .krampus-body {
@@ -78,7 +80,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  z-index: 2; }
 
 .santa-body {
   margin-left: 10%; }
@@ -125,16 +128,9 @@
 .krampus-l-arm__lower,
 .krampus-r-arm__upper,
 .krampus-r-arm__lower {
-  background-color: #333;
   position: absolute;
   height: 50%;
   width: 90%; }
-
-.santa-l-arm__upper,
-.santa-l-arm__lower,
-.santa-r-arm__upper,
-.santa-r-arm__lower {
-  background-color: blue; }
 
 .krampus-l-arm__upper,
 .krampus-l-arm__lower,
@@ -142,19 +138,23 @@
 .krampus-r-arm__lower {
   background-color: orange; }
 
-.santa-l-arm__upper,
-.santa-r-arm__upper,
 .krampus-l-arm__upper,
 .krampus-r-arm__upper {
-  transform: rotate(45deg);
-  transform-origin: 50% 50%;
-  left: 0; }
+  transform: translate(-16%, 123%) rotate(60deg); }
 
-.santa-l-arm__lower,
-.santa-r-arm__lower,
 .krampus-l-arm__lower,
 .krampus-r-arm__lower {
-  transform: translateX(60%) rotate(-45deg); }
+  transform: translate(28%, 140%) rotate(-60deg); }
+
+.santa-l-arm__lower,
+.santa-r-arm__lower {
+  background-color: blue;
+  transform: translate(24%, 123%) rotate(-60deg); }
+
+.santa-l-arm__upper,
+.santa-r-arm__upper {
+  background-color: blue;
+  transform: translate(-20%, 123%) rotate(60deg); }
 
 .santa-body__head,
 .krampus-body__head {
@@ -176,6 +176,57 @@
   z-index: 2;
   width: 100%;
   height: 100%; }
+
+.santa-legs {
+  position: absolute;
+  height: 25%;
+  width: 25%;
+  left: 25%;
+  transform: translate(-30%, 100%);
+  bottom: 16%;
+  z-index: -1; }
+
+.krampus-legs {
+  position: absolute;
+  height: 25%;
+  width: 25%;
+  right: 10%;
+  transform: translate(-30%, 100%);
+  bottom: 16%;
+  z-index: 1; }
+
+.santa-legs__l-upper,
+.santa-legs__l-lower,
+.santa-legs__r-upper,
+.santa-legs__r-lower,
+.krampus-legs__l-upper,
+.krampus-legs__l-lower,
+.krampus-legs__r-upper,
+.krampus-legs__r-lower {
+  width: 10px;
+  background-color: #333;
+  position: absolute;
+  height: 33%;
+  left: 55%; }
+
+.santa-legs__l-upper,
+.krampus-legs__l-upper,
+.santa-legs__r-upper,
+.krampus-legs__r-upper {
+  transform: rotate(-30deg); }
+
+.santa-legs__l-lower,
+.krampus-legs__l-lower,
+.santa-legs__r-lower,
+.krampus-legs__r-lower {
+  transform: rotate(30deg);
+  top: 20%; }
+
+.santa-legs__l-upper,
+.santa-legs__l-lower,
+.krampus-legs__r-upper,
+.krampus-legs__r-lower {
+  left: 45%; }
 
 .instructions__santa,
 .instructions__krampus {
