--- a/sass/index.scss
+++ b/sass/index.scss
@@ -3,7 +3,7 @@ $red: 					#d96a71;
 $red2: 					adjust-color($red, 10%);
 $white:					#fff;
 $dark:					#333;
-$armBend: 			45deg;
+$armBend: 			60deg;
 
 .stage {
 	color: $white;
@@ -62,7 +62,7 @@ $armBend: 			45deg;
 
 .result {
 	align-items: center;
-	background-color: $red2;
+	background-color: rgba(0,0,0,0.2);
 	bottom: 0;
 	display: flex;
 	flex-direction: column;
@@ -76,6 +76,7 @@ $armBend: 			45deg;
 	transform: scale(0);
 	transition: transform $baseTransitionTime ease-out, opacity $baseTransitionTime ease-out;
 	visibility: hidden;
+	z-index: 5;
 
 	.fight-over & {
 		opacity: 1;
@@ -92,6 +93,7 @@ $armBend: 			45deg;
 	display: flex;
 	height: 75vh;
 	margin: 0 10%;
+	position: relative;
 }
 
 .santa-body,
@@ -102,6 +104,7 @@ $armBend: 			45deg;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	z-index: 2;
 }
 
 .santa-body {
@@ -159,17 +162,9 @@ $armBend: 			45deg;
 .krampus-l-arm__lower,
 .krampus-r-arm__upper,
 .krampus-r-arm__lower {
-	background-color: $dark;
 	position: absolute;
 	height: 50%;
 	width: 90%;
-}
-
-.santa-l-arm__upper,
-.santa-l-arm__lower,
-.santa-r-arm__upper,
-.santa-r-arm__lower, {
-	background-color: blue;
 }
 
 .krampus-l-arm__upper,
@@ -179,20 +174,26 @@ $armBend: 			45deg;
 	background-color: orange;
 }
 
-.santa-l-arm__upper,
-.santa-r-arm__upper,
 .krampus-l-arm__upper,
 .krampus-r-arm__upper {
-	transform: rotate($armBend);
-	transform-origin: 50% 50%;
-	left: 0;
+	transform: translate(-16%, 123%) rotate($armBend);
+}
+
+.krampus-l-arm__lower,
+.krampus-r-arm__lower {
+	transform: translate(28%, 140%) rotate(-$armBend);
 }
 
 .santa-l-arm__lower,
-.santa-r-arm__lower,
-.krampus-l-arm__lower,
-.krampus-r-arm__lower {
-	transform: translateX(60%) rotate(-$armBend);
+.santa-r-arm__lower {
+	background-color: blue;
+	transform: translate(24%, 123%) rotate(-$armBend);
+}
+
+.santa-l-arm__upper,
+.santa-r-arm__upper {
+	background-color: blue;
+	transform: translate(-20%, 123%) rotate($armBend);
 }
 
 .santa-body__head,
@@ -217,6 +218,66 @@ $armBend: 			45deg;
 	z-index: 2;
 	width: 100%;
 	height: 100%;
+}
+
+// =====================
+// LEGS & FEET
+
+.santa-legs {
+	position: absolute;
+	height: 25%;
+	width: 25%;
+	left: 25%;
+	transform: translate(-30%, 100%);
+	bottom: 16%;
+	z-index: -1;
+}
+
+.krampus-legs {
+	position: absolute;
+	height: 25%;
+	width: 25%;
+	right: 10%;
+	transform: translate(-30%, 100%);
+	bottom: 16%;
+	z-index: 1;
+}
+
+.santa-legs__l-upper,
+.santa-legs__l-lower,
+.santa-legs__r-upper,
+.santa-legs__r-lower,
+.krampus-legs__l-upper,
+.krampus-legs__l-lower,
+.krampus-legs__r-upper,
+.krampus-legs__r-lower {
+	width: 10px;
+	background-color: $dark;
+	position: absolute;
+	height: 33%;
+	left: 55%;
+}
+
+.santa-legs__l-upper,
+.krampus-legs__l-upper,
+.santa-legs__r-upper,
+.krampus-legs__r-upper  {
+	transform: rotate(-30deg);
+}
+
+.santa-legs__l-lower,
+.krampus-legs__l-lower,
+.santa-legs__r-lower,
+.krampus-legs__r-lower {
+	transform: rotate(30deg);
+	top: 20%;
+}
+
+.santa-legs__l-upper,
+.santa-legs__l-lower,
+.krampus-legs__r-upper,
+.krampus-legs__r-lower {
+	left: 45%;
 }
 
 .instructions__santa,
