--- a/sass/index.scss
+++ b/sass/index.scss
@@ -92,18 +92,19 @@ $armBend: 			60deg;
 .fighters {
 	display: flex;
 	height: 75vh;
-	margin: 0 10%;
+	margin: 0 auto;
+	max-width: 910px;
 	position: relative;
 }
 
 .santa-body,
 .krampus-body {
-	flex: 1;
-	position: relative;
+	align-items: center;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	flex: 1;
 	justify-content: center;
+	position: relative;
 	z-index: 2;
 }
 
@@ -120,10 +121,10 @@ $armBend: 			60deg;
 .santa-r-arm,
 .krampus-l-arm,
 .krampus-r-arm {
+	height: 50px;
 	position: relative;
 	top: 25%;
 	width: 100%;
-	height: 50px;
 }
 
 .santa-l-arm,
@@ -141,8 +142,8 @@ $armBend: 			60deg;
 
 .krampus-l-arm,
 .krampus-r-arm {
-	right: 50%;
 	left: auto;
+	right: 50%;
 }
 
 .santa-l-arm {
@@ -162,8 +163,8 @@ $armBend: 			60deg;
 .krampus-l-arm__lower,
 .krampus-r-arm__upper,
 .krampus-r-arm__lower {
-	position: absolute;
 	height: 50%;
+	position: absolute;
 	width: 90%;
 }
 
@@ -198,48 +199,48 @@ $armBend: 			60deg;
 
 .santa-body__head,
 .krampus-body__head {
-	background-color: $white;
-	width: 20%;
-	height: 20%;
+	height: 10%;
+	position: relative;
+	top: -20%;
+	width: 50%;
+	z-index: 10;
 }
 
 .santa-body__torso,
 .krampus-body__torso {
-	position: relative;
-	background-color: $white;
-	width: 60%;
 	height: 50%;
+	position: relative;
+	width: 70%;
 }
 
 .santa-body__torso__inner,
 .krampus-body__torso__inner {
-	background-color: $white;
-	position: absolute;
-	z-index: 2;
-	width: 100%;
 	height: 100%;
+	position: absolute;
+	width: 100%;
+	z-index: 2;
 }
 
 // =====================
 // LEGS & FEET
 
 .santa-legs {
-	position: absolute;
+	bottom: 25%;
 	height: 25%;
-	width: 25%;
 	left: 25%;
+	position: absolute;
 	transform: translate(-30%, 100%);
-	bottom: 16%;
+	width: 25%;
 	z-index: -1;
 }
 
 .krampus-legs {
-	position: absolute;
+	bottom: 16%;
 	height: 25%;
-	width: 25%;
+	position: absolute;
 	right: 10%;
 	transform: translate(-30%, 100%);
-	bottom: 16%;
+	width: 25%;
 	z-index: 1;
 }
 
@@ -251,11 +252,11 @@ $armBend: 			60deg;
 .krampus-legs__l-lower,
 .krampus-legs__r-upper,
 .krampus-legs__r-lower {
-	width: 10px;
-	background-color: $dark;
+	background-color: rgba(0,0,0,0.2);
+	height: 50%;
+	left: 30%;
 	position: absolute;
-	height: 33%;
-	left: 55%;
+	width: 40%;
 }
 
 .santa-legs__l-upper,
@@ -277,7 +278,7 @@ $armBend: 			60deg;
 .santa-legs__l-lower,
 .krampus-legs__r-upper,
 .krampus-legs__r-lower {
-	left: 45%;
+	left: 55%;
 }
 
 .instructions__santa,
