Feat: Added Santa's arms and feet

--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,7 @@
   height: 50px;
   position: relative;
   top: 25%;
-  width: 100%; }
+  width: 80%; }
 
 .santa-l-arm,
 .santa-r-arm,
@@ -149,12 +149,10 @@
 
 .santa-l-arm__lower,
 .santa-r-arm__lower {
-  background-color: blue;
-  transform: translate(24%, 123%) rotate(-60deg); }
+  transform: translate(0%, 123%) rotate(-60deg); }
 
 .santa-l-arm__upper,
 .santa-r-arm__upper {
-  background-color: blue;
   transform: translate(-20%, 123%) rotate(60deg); }
 
 .santa-body__head,
@@ -204,7 +202,6 @@
 .krampus-legs__l-lower,
 .krampus-legs__r-upper,
 .krampus-legs__r-lower {
-  background-color: rgba(0, 0, 0, 0.2);
   height: 50%;
   left: 30%;
   position: absolute;
@@ -215,6 +212,22 @@
 .santa-legs__r-upper,
 .krampus-legs__r-upper {
   transform: rotate(-30deg); }
+
+.santa-legs__r-upper,
+.santa-legs__r-lower {
+  z-index: 5; }
+
+.santa-legs__l-foot,
+.santa-legs__r-foot {
+  bottom: -10%;
+  height: 20%;
+  left: 29%;
+  position: absolute;
+  width: 44%;
+  z-index: 5; }
+
+.santa-legs__l-foot {
+  left: 52%; }
 
 .santa-legs__l-lower,
 .krampus-legs__l-lower,
