Fix & Feat: Fix Santa's buttons, added responsive styles

--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,31 @@
     background-color: #e36a71;
     left: 50%; }
 
+.responsive-message {
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.05);
+  color: #333;
+  display: flex;
+  font-family: 'Bangers';
+  flex-direction: column;
+  height: 75%;
+  justify-content: center;
+  left: 50%;
+  padding: 30px;
+  position: fixed;
+  text-align: center;
+  top: 50%;
+  transform: translate(-50%, -50%) skew(-2.5deg);
+  width: 75%; }
+  @media screen and (min-width: 910px) {
+    .responsive-message {
+      display: none; } }
+
+.responsive-message h4 {
+  font-size: 25px;
+  margin: 15px; }
+
 .header {
   left: 50%;
   position: absolute;
@@ -69,10 +94,13 @@
 
 .fighters {
   display: flex;
-  height: 75vh;
-  margin: 0 auto;
-  max-width: 910px;
-  position: relative; }
+  height: 645px;
+  margin: 0;
+  width: 910px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
 
 .santa-body,
 .krampus-body {
@@ -116,10 +144,12 @@
   right: 50%; }
 
 .santa-l-arm {
-  left: 70%; }
+  left: 70%;
+  z-index: -1; }
 
 .krampus-r-arm {
-  right: 70%; }
+  right: 70%;
+  z-index: -1; }
 
 .santa-l-arm__upper,
 .santa-l-arm__lower,
@@ -213,7 +243,7 @@
 .krampus-legs__l-upper,
 .santa-legs__r-upper,
 .krampus-legs__r-upper {
-  transform: rotate(-30deg); }
+  transform: rotate(0deg); }
 
 .santa-legs__r-upper,
 .santa-legs__r-lower {
@@ -235,8 +265,8 @@
 .krampus-legs__l-lower,
 .santa-legs__r-lower,
 .krampus-legs__r-lower {
-  transform: rotate(30deg);
-  top: 20%; }
+  transform: rotate(0deg);
+  top: 32%; }
 
 .santa-legs__l-upper,
 .santa-legs__l-lower,
