Feat: Improved result screen design

--- a/css/index.css
+++ b/css/index.css
@@ -72,7 +72,6 @@ body {
 
 .result {
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
   bottom: 0;
   display: flex;
   flex-direction: column;
@@ -91,10 +90,27 @@ body {
     opacity: 1;
     transform: scale(1);
     visibility: visible; }
+  .santa-wins .result {
+    background-color: rgba(217, 106, 113, 0.85); }
+  .krampus-wins .result {
+    background-color: rgba(0, 0, 0, 0.85); }
+
+.result__title {
+  text-shadow: 3px 3px rgba(0, 0, 0, 0.2), 0 0 rgba(255, 255, 255, 0);
+  animation: pulse 1s infinite; }
+
+@keyframes pulse {
+  0% {
+    text-shadow: 3px 3px rgba(0, 0, 0, 0.2), 0 0 rgba(255, 255, 255, 0.2); }
+  70% {
+    text-shadow: 3px 3px rgba(0, 0, 0, 0.2), 0 50px rgba(255, 255, 255, 0); }
+  100% {
+    text-shadow: 3px 3px rgba(0, 0, 0, 0.2), 0 0 rgba(255, 255, 255, 0); } }
 
 .result__title {
   color: #fff;
-  font-size: 15vw; }
+  font-size: 15vw;
+  text-shadow: 3px 3px rgba(0, 0, 0, 0.2); }
 
 .fighters {
   display: flex;
@@ -321,6 +337,7 @@ body {
 .santa-key-s,
 .krampus-key-k,
 .krampus-key-l {
+  background: rgba(255, 255, 255, 0.5);
   border: 2px solid #fff;
   display: inline-block;
   font-size: 25px;
@@ -328,3 +345,22 @@ body {
   padding: 10px;
   text-align: center;
   width: 25px; }
+
+.btn-reset {
+  background: #fff;
+  border-radius: 0;
+  border: 0;
+  box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.2);
+  color: #333;
+  font-family: 'Bangers';
+  font-size: 20px;
+  padding: 15px 25px;
+  position: relative;
+  outline: 0; }
+  .btn-reset:hover {
+    background-color: #333;
+    color: #fff;
+    cursor: pointer; }
+  .btn-reset:active {
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+    top: 3px; }
