Feat: Added OG, meta links and GA tracking

--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,8 @@ body {
   text-align: center;
   top: 50%;
   transform: translate(-50%, -50%) skew(-2.5deg);
-  width: 75%; }
+  width: 75%;
+  z-index: 20; }
   @media screen and (min-width: 910px) {
     .responsive-message {
       display: none; } }
@@ -379,6 +380,7 @@ body {
   background: #fff;
   border-radius: 0;
   border: 0;
+  bottom: 10%;
   box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.2);
   color: #333;
   font-family: 'Bangers';
@@ -392,4 +394,4 @@ body {
     cursor: pointer; }
   .btn-reset:active {
     box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
-    top: 3px; }
+    bottom: 9.5%; }
